# app2

./: README.md  config.yaml  pyproject.toml  requirements.txt
.hypothesis/constants/: 05e2c68df5168b1a  1f3d8c1e1b488633  2436a41ba108e563  430c68d59438b78f  47bfdfbae6bdf1eb  4c09422cb4042651  54c6ef6b7ef1c197  7b4855463458b98f  897d7028e4390bbd  8cffdcfb516b451d  c9332eafe6a558ae  fb653a7666e1a5dc  fb946aa665ba9076
.hypothesis/examples/04e6b3400353b141/: 994284a9990d17e7
.hypothesis/tmp/: tmp53y786mt  tmp735jln8w  tmp90g57dmd  tmpg8jhl_xx  tmpgb3tm8da  tmpinfpxyy9  tmplann5ieu  tmpmwibgdqp  tmptgjbes4c
.kiro/specs/asteroid-threat-monitor/: .config.kiro  design.md  requirements.md  tasks.md
data/auto_pipeline_frames/: metadata.json
data/sim_frames/: frame_000000.fits  frame_000001.fits  frame_000002.fits  frame_000003.fits  frame_000004.fits  metadata.json
src/: __init__.py  alert_manager.py  api_client.py  config.py  dashboard.py  data_store.py  detector.py  image_processor.py  main.py  models.py  simulator.py  threat_classifier.py  tracker.py  trajectory_predictor.py
tests/: conftest.py  test_alert_manager.py  test_api_client.py  test_config.py  test_data_store.py  test_detector.py  test_image_processor.py  test_main.py  test_simulator.py  test_threat_classifier.py  test_tracker.py  test_trajectory_predictor.py
