[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "asteroid-threat-monitor"
version = "0.1.0"
description = "AI-powered asteroid detection, tracking, and threat classification pipeline"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "ultralytics>=8.0",
    "onnxruntime>=1.16",
    "torch>=2.0",
    "filterpy>=1.4",
    "scipy>=1.11",
    "astropy>=5.3",
    "sqlalchemy>=2.0",
    "requests>=2.31",
    "streamlit>=1.28",
    "plotly>=5.17",
]

[project.optional-dependencies]
orbital = ["poliastro>=0.17"]
dev = [
    "hypothesis>=6.88",
    "pytest>=7.4",
]

[project.scripts]
asteroid-monitor = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
